--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 /*----------------------------------------------------------*/
 
 :root {
-    --page-background-color: #d8d6d6;
+    --page-background-color: #dce7f5;
     --main-background-color: #ffffff;
     --hero-background-color: #1F2937;
     --button-background-color: #3882F6;
@@ -35,4 +35,18 @@ body {
 
 footer {
     bottom: 0px;
+}
+
+header {
+    background-color: var(--hero-background-color);
+    color: var(--primary-text-light);
+}
+
+header a{
+    text-decoration: none;
+    color: var(--secondary-text-light);
+}
+
+header ul{
+    list-style: none;
 }
