--- a/css/style.css
+++ b/css/style.css
@@ -25,21 +25,34 @@
     background-color: var(--page-background-color);
 }
 
-body {
-    height: 100vh;
-    width: 960px;
-    background-color: var(--main-background-color);
-    align-content: center;
-    margin: 0 auto;
+html {
+    box-sizing: border-box;
 }
 
-footer {
-    bottom: 0px;
+
+*, *::before, *::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+}
+
+
+* {
+    font-family: 'Roboto Slab', serif;
+    /* border: 2px solid red; */    
+}
+
+body {
+    height: 100vh;
+    max-width: 960px;
+    background-color: var(--main-background-color);
+    margin: 0 auto;
 }
 
 header {
     background-color: var(--hero-background-color);
     color: var(--primary-text-light);
+    height: auto;
 }
 
 header a{
@@ -50,3 +63,64 @@ header a{
 header ul{
     list-style: none;
 }
+
+nav {
+    padding-left: 30px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-size: 24px;
+    display: inline-block;
+}
+
+.nav-links {
+    display: flex;
+}
+
+.nav-item a {
+    display: inline-block;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: var(--secondary-text-light); 
+  }
+  
+.nav-item:hover a {
+    color: var(--button-background-color);
+    transition: 0.8s ease;
+  }
+
+.hero {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px;
+}
+
+.hero-cta h1 {
+    font-size: 48px;
+    color:var(--primary-text-light);
+    font-weight: 800pc;
+}
+
+.hero-image img {
+    display: flex;
+    width: 400px;
+    height: 250px;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
+    height: 40px;
+    width: 960px;
+    text-align: center;
+    background: var(--hero-background-color);
+    color: var(--secondary-text-light);
+    padding-top: 10px;
+}
+
