--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
     --secondary-text-light: #E5E7EB;
     --quote-background-color: #E5E7EB;
     --qoute-text-color: #1F2937;
+    --info-text-color: #1F2937;
     background-color: var(--page-background-color);
 }
 
@@ -43,11 +44,13 @@ html {
 }
 
 body {
-    height: 100vh;
+    height: auto;
     max-width: 960px;
     background-color: var(--main-background-color);
     margin: 0 auto;
 }
+
+/* Header */
 
 header {
     background-color: var(--hero-background-color);
@@ -63,6 +66,8 @@ header a{
 header ul{
     list-style: none;
 }
+
+/* Navigation */
 
 nav {
     padding-left: 30px;
@@ -93,7 +98,9 @@ nav {
     transition: 0.8s ease;
   }
 
-.hero {
+/* Hero */
+
+  .hero {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -113,8 +120,56 @@ nav {
     height: 250px;
 }
 
+/* Information Section */
+
+#info {
+    text-align: center;
+    padding: 20px;
+}
+
+#info h2{
+    color:var(--info-text-color);
+    font-size: 36px;
+    font-weight: 900;
+    padding: 20px;
+}
+
+.articles-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.article {
+    width: 150px;
+    display: inline-block;
+}
+
+.article-text {
+    font-weight: 100;
+}
+
+.article-image{
+    width: 150px;
+    height: 100px;
+}
+
+#quote {
+    background-color: var(--quote-background-color);
+    color: var(--qoute-text-color);
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    padding: 50px;
+    height: auto;
+}
+
+#quote .author {
+    text-align: right;
+}
+
 footer{
-    position: absolute;
+    position: static;
     bottom: 0;
     height: 40px;
     width: 960px;
@@ -123,4 +178,3 @@ footer{
     color: var(--secondary-text-light);
     padding-top: 10px;
 }
-
