- Update root background color

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 /*----------------------------------------------------------*/
 
 :root {
-    --page-background-color: #f5f9fd;
+    --page-background-color: #c7e1fc;
     --main-background-color: #ffffff;
     --hero-background-color: #1F2937;
     --button-background-color: #3882F6;
