--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 /*----------------------------------------------------------*/
 
 :root {
-    --page-background-color: #c7e1fc;
+    --page-background-color: #8facca;
     --main-background-color: #ffffff;
     --hero-background-color: #1F2937;
     --button-background-color: #3882F6;
